Endpoint filter finalizado.